gccida/c3/cpp_parse_escape
/data/output_dir/patch/gcc/ida/clang/O3/gcc-clang-O3/cpp_parse_escape/src/cpplex.c:2156:1: error: unknown type name 'cpp_reader_0'; did you mean 'cpp_reader'?
cpp_reader_0 *pfile, 
^~~~~~~~~~~~
cpp_reader
/data/output_dir/patch/gcc/ida/clang/O3/gcc-clang-O3/cpp_parse_escape/src/cpplib.h:36:27: note: 'cpp_reader' declared here
typedef struct cpp_reader cpp_reader;
                          ^
/data/output_dir/patch/gcc/ida/clang/O3/gcc-clang-O3/cpp_parse_escape/src/cpplex.c:2278:8: error: use of undeclared identifier 'sch_istable'; did you mean '_sch_istable'?
if ( ( sch_istable[v25] & 0x100) != 0 ) 
       ^~~~~~~~~~~
       _sch_istable
/data/output_dir/patch/gcc/ida/clang/O3/gcc-clang-O3/cpp_parse_escape/src/safe-ctype.h:72:29: note: '_sch_istable' declared here
extern const unsigned short _sch_istable[256];
                            ^
/data/output_dir/patch/gcc/ida/clang/O3/gcc-clang-O3/cpp_parse_escape/src/cpplex.c:2280:7: error: use of undeclared identifier 'hex_value'; did you mean '_hex_value'?
v26 = hex_value[v25]; 
      ^~~~~~~~~
      _hex_value
/data/output_dir/patch/gcc/ida/clang/O3/gcc-clang-O3/cpp_parse_escape/src/libiberty.h:251:19: note: '_hex_value' declared here
extern const char _hex_value[_hex_array_size];
                  ^
/data/output_dir/patch/gcc/ida/clang/O3/gcc-clang-O3/cpp_parse_escape/src/cpplex.c:2285:8: error: use of undeclared identifier 'sch_istable'; did you mean '_sch_istable'?
if ( ( sch_istable[*v24] & 0x100) != 0 ) 
       ^~~~~~~~~~~
       _sch_istable
/data/output_dir/patch/gcc/ida/clang/O3/gcc-clang-O3/cpp_parse_escape/src/safe-ctype.h:72:29: note: '_sch_istable' declared here
extern const unsigned short _sch_istable[256];
                            ^
/data/output_dir/patch/gcc/ida/clang/O3/gcc-clang-O3/cpp_parse_escape/src/cpplex.c:2287:7: error: use of undeclared identifier 'hex_value'; did you mean '_hex_value'?
v27 = hex_value[v25]; 
      ^~~~~~~~~
      _hex_value
/data/output_dir/patch/gcc/ida/clang/O3/gcc-clang-O3/cpp_parse_escape/src/libiberty.h:251:19: note: '_hex_value' declared here
extern const char _hex_value[_hex_array_size];
                  ^
/data/output_dir/patch/gcc/ida/clang/O3/gcc-clang-O3/cpp_parse_escape/src/cpplex.c:2372:8: error: use of undeclared identifier 'sch_istable'; did you mean '_sch_istable'?
if ( ( sch_istable[v28] & 0x100) == 0 ) 
       ^~~~~~~~~~~
       _sch_istable
/data/output_dir/patch/gcc/ida/clang/O3/gcc-clang-O3/cpp_parse_escape/src/safe-ctype.h:72:29: note: '_sch_istable' declared here
extern const unsigned short _sch_istable[256];
                            ^
/data/output_dir/patch/gcc/ida/clang/O3/gcc-clang-O3/cpp_parse_escape/src/cpplex.c:2391:7: error: use of undeclared identifier 'hex_value'; did you mean '_hex_value'?
v37 = hex_value[v28]; 
      ^~~~~~~~~
      _hex_value
/data/output_dir/patch/gcc/ida/clang/O3/gcc-clang-O3/cpp_parse_escape/src/libiberty.h:251:19: note: '_hex_value' declared here
extern const char _hex_value[_hex_array_size];
                  ^
/data/output_dir/patch/gcc/ida/clang/O3/gcc-clang-O3/cpp_parse_escape/src/cpplex.c:2400:8: error: use of undeclared identifier 'sch_istable'; did you mean '_sch_istable'?
if ( ( sch_istable[v28] & 0x100) == 0 ) 
       ^~~~~~~~~~~
       _sch_istable
/data/output_dir/patch/gcc/ida/clang/O3/gcc-clang-O3/cpp_parse_escape/src/safe-ctype.h:72:29: note: '_sch_istable' declared here
extern const unsigned short _sch_istable[256];
                            ^
/data/output_dir/patch/gcc/ida/clang/O3/gcc-clang-O3/cpp_parse_escape/src/cpplex.c:2426:8: error: use of undeclared identifier 'sch_istable'; did you mean '_sch_istable'?
if ( ( sch_istable[**pstr] & 0xAC) != 0 ) 
       ^~~~~~~~~~~
       _sch_istable
/data/output_dir/patch/gcc/ida/clang/O3/gcc-clang-O3/cpp_parse_escape/src/safe-ctype.h:72:29: note: '_sch_istable' declared here
extern const unsigned short _sch_istable[256];
                            ^
9 errors generated.
make: *** [/data/output_dir/patch/gcc/ida/clang/O3/gcc-clang-O3/cpp_parse_escape/src/obj/cpplex.o] Error 1
